<resources>
    <string name="app_name">My ToDo Appication</string>
    <string name="My_ToDo" translatable="false">My ToDo</string>
    <string name="Login">Login To Your Account</string>
    <string name="Email">Email</string>
    <string name="Password">Password</string>
    <string name="Login_Enter">LOGIN</string>
    <string name="DoNotAccount">Don\'t have an account?</string>
    <string name="Register">Register</string>
</resources>
